[gd_scene load_steps=18 format=3 uid="uid://cuxogp1ofe0fj"]

[ext_resource type="Script" path="res://Scene_Switcher/level/level_A1.gd" id="1_by72y"]
[ext_resource type="PackedScene" uid="uid://dg5dmtikklnwn" path="res://Scene_Switcher/enemy/assault_tank.tscn" id="2_8cixo"]
[ext_resource type="PackedScene" uid="uid://bbtkbj3sj8rn1" path="res://Scene_Switcher/enemy/helicopter.tscn" id="3_m54mo"]
[ext_resource type="PackedScene" uid="uid://pu6gx570i247" path="res://Scene_Switcher/enemy/jeep.tscn" id="4_mf1lf"]
[ext_resource type="PackedScene" uid="uid://mp15xma1rlvc" path="res://Scene_Switcher/enemy/artillery.tscn" id="5_1m4kt"]
[ext_resource type="PackedScene" uid="uid://dgg148mcr147s" path="res://Scene_Switcher/enemy/Kamikaze.tscn" id="6_htdpw"]
[ext_resource type="PackedScene" uid="uid://bgntfh7ttfv45" path="res://Scene_Switcher/enemy/Drop/item_drop.tscn" id="7_iuwtp"]
[ext_resource type="Texture2D" uid="uid://cnb60p81bkeov" path="res://Scene_Switcher/level/asset/normal_city/city_2_right_free_street.png" id="8_l0kwq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0j4l"]
size = Vector2(424.5, 1081)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tvnd"]
size = Vector2(393, 1081)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygj74"]
size = Vector2(82, 63.5294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulfld"]
size = Vector2(332.8, 288)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enper"]
size = Vector2(307.2, 257)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0ucp"]
size = Vector2(82, 13.4706)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcd8c"]
size = Vector2(329.25, 370.794)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofjhu"]
size = Vector2(307.2, 344)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwh6f"]
size = Vector2(82.5, 16.9412)

[node name="level_a2_2" type="Node2D"]
z_index = -1
script = ExtResource("1_by72y")
assault_tank_scene = ExtResource("2_8cixo")
helicopter_scene = ExtResource("3_m54mo")
jeep_scene = ExtResource("4_mf1lf")
artillery_scene = ExtResource("5_1m4kt")
kamikaze_scene = ExtResource("6_htdpw")
item_drop_scene = ExtResource("7_iuwtp")

[node name="Sprites" type="Node2D" parent="."]

[node name="city_2_right" type="Sprite2D" parent="Sprites"]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("8_l0kwq")

[node name="left_border" type="Node2D" parent="."]
position = Vector2(128, 544)
scale = Vector2(4, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D"]
position = Vector2(203.75, 539.5)
shape = SubResource("RectangleShape2D_y0j4l")

[node name="StaticBody2D_Other" type="Area2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D_Other"]
position = Vector2(187.5, 539.5)
shape = SubResource("RectangleShape2D_7tvnd")

[node name="limit" type="StaticBody2D" parent="left_border"]
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/limit"]
position = Vector2(7, -0.235302)
shape = SubResource("RectangleShape2D_ygj74")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="right_border" type="Node2D" parent="."]
position = Vector2(1760, 544)
scale = Vector2(5, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D"]
position = Vector2(89.6, 143)
shape = SubResource("RectangleShape2D_ulfld")

[node name="StaticBody2D_Other" type="Area2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D_Other"]
position = Vector2(102.4, 127.5)
shape = SubResource("RectangleShape2D_enper")

[node name="limit" type="StaticBody2D" parent="right_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/limit"]
position = Vector2(406, -25.2647)
shape = SubResource("RectangleShape2D_n0ucp")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="StaticBody2D2" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D2"]
position = Vector2(91.375, 894.603)
shape = SubResource("RectangleShape2D_gcd8c")

[node name="StaticBody2D_Other2" type="Area2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D_Other2"]
position = Vector2(102.4, 908)
shape = SubResource("RectangleShape2D_ofjhu")

[node name="limit2" type="StaticBody2D" parent="right_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/limit2"]
position = Vector2(406.75, 23.0588)
shape = SubResource("RectangleShape2D_iwh6f")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="spawn_point" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="spawn_point"]
position = Vector2(524, 336)

[node name="Marker2D3" type="Marker2D" parent="spawn_point"]
position = Vector2(610, 670)

[node name="Marker2D2" type="Marker2D" parent="spawn_point"]
position = Vector2(1400, 743)

[node name="Marker2D4" type="Marker2D" parent="spawn_point"]
position = Vector2(983, 628)

[node name="Marker2D7" type="Marker2D" parent="spawn_point"]
position = Vector2(1248, 393)

[node name="Marker2D5" type="Marker2D" parent="spawn_point"]
position = Vector2(816, 961)

[node name="Marker2D6" type="Marker2D" parent="spawn_point"]
position = Vector2(1176, 919)

[connection signal="body_entered" from="left_border/StaticBody2D_Other" to="." method="_on_static_body_2d_other_body_entered"]
