[gd_scene load_steps=18 format=3 uid="uid://c1bm48ofex4dr"]

[ext_resource type="Script" path="res://Scene_Switcher/level/level_A1.gd" id="1_psu11"]
[ext_resource type="PackedScene" uid="uid://dg5dmtikklnwn" path="res://Scene_Switcher/enemy/assault_tank.tscn" id="2_cg787"]
[ext_resource type="PackedScene" uid="uid://bbtkbj3sj8rn1" path="res://Scene_Switcher/enemy/helicopter.tscn" id="3_ujqm8"]
[ext_resource type="PackedScene" uid="uid://pu6gx570i247" path="res://Scene_Switcher/enemy/jeep.tscn" id="4_0ijan"]
[ext_resource type="PackedScene" uid="uid://mp15xma1rlvc" path="res://Scene_Switcher/enemy/artillery.tscn" id="5_663a2"]
[ext_resource type="PackedScene" uid="uid://dgg148mcr147s" path="res://Scene_Switcher/enemy/Kamikaze.tscn" id="6_mkrwq"]
[ext_resource type="PackedScene" uid="uid://bgntfh7ttfv45" path="res://Scene_Switcher/enemy/Drop/item_drop.tscn" id="7_djrmw"]
[ext_resource type="Texture2D" uid="uid://bffj4eomlasgg" path="res://Scene_Switcher/level/asset/normal_city/city_2_left_free_street.png" id="8_g0stb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uelrl"]
size = Vector2(424.5, 375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdlmk"]
size = Vector2(393, 342)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxqmo"]
size = Vector2(82, 16.8236)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixmlj"]
size = Vector2(424.5, 295)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxtg1"]
size = Vector2(393, 266)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nngv0"]
size = Vector2(82, 13.0294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b6yq"]
size = Vector2(332.8, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6md14"]
size = Vector2(307.2, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygj74"]
size = Vector2(82, 64.9412)

[node name="level_a3_1" type="Node2D"]
z_index = -1
script = ExtResource("1_psu11")
assault_tank_scene = ExtResource("2_cg787")
helicopter_scene = ExtResource("3_ujqm8")
jeep_scene = ExtResource("4_0ijan")
artillery_scene = ExtResource("5_663a2")
kamikaze_scene = ExtResource("6_mkrwq")
item_drop_scene = ExtResource("7_djrmw")

[node name="Sprites" type="Node2D" parent="."]

[node name="city_2_left" type="Sprite2D" parent="Sprites"]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("8_g0stb")

[node name="left_border" type="Node2D" parent="."]
position = Vector2(128, 544)
scale = Vector2(4, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D"]
position = Vector2(203.75, 892.5)
shape = SubResource("RectangleShape2D_uelrl")

[node name="StaticBody2D_Other" type="Area2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D_Other"]
position = Vector2(187.5, 909)
shape = SubResource("RectangleShape2D_jdlmk")

[node name="limit" type="StaticBody2D" parent="left_border"]
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/limit"]
position = Vector2(7, 23.1176)
shape = SubResource("RectangleShape2D_xxqmo")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="StaticBody2D2" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-30, -73.4118)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D2"]
position = Vector2(203.75, 852.5)
shape = SubResource("RectangleShape2D_ixmlj")

[node name="StaticBody2D_Other2" type="Area2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-30, -73.4118)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D_Other2"]
position = Vector2(192, 843)
shape = SubResource("RectangleShape2D_uxtg1")

[node name="limit2" type="StaticBody2D" parent="left_border"]
position = Vector2(2, -41.4118)
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/limit2"]
position = Vector2(8, 16.0735)
shape = SubResource("RectangleShape2D_nngv0")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="right_border" type="Node2D" parent="."]
position = Vector2(1760, 544)
scale = Vector2(5, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D"]
position = Vector2(89.6, 552)
shape = SubResource("RectangleShape2D_8b6yq")

[node name="StaticBody2D_Other" type="Area2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D_Other"]
position = Vector2(102.4, 552)
shape = SubResource("RectangleShape2D_6md14")

[node name="limit" type="StaticBody2D" parent="right_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/limit"]
position = Vector2(406, 0.470589)
shape = SubResource("RectangleShape2D_ygj74")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="spawn_point" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="spawn_point"]
position = Vector2(524, 336)

[node name="Marker2D3" type="Marker2D" parent="spawn_point"]
position = Vector2(610, 670)

[node name="Marker2D2" type="Marker2D" parent="spawn_point"]
position = Vector2(1400, 743)

[node name="Marker2D4" type="Marker2D" parent="spawn_point"]
position = Vector2(983, 628)

[node name="Marker2D7" type="Marker2D" parent="spawn_point"]
position = Vector2(1248, 393)

[node name="Marker2D5" type="Marker2D" parent="spawn_point"]
position = Vector2(816, 961)

[node name="Marker2D6" type="Marker2D" parent="spawn_point"]
position = Vector2(1176, 919)

[connection signal="body_entered" from="right_border/StaticBody2D_Other" to="." method="_on_static_body_2d_other_body_entered"]
