[gd_scene load_steps=18 format=3 uid="uid://b8jto3k6gnsyf"]

[ext_resource type="Script" path="res://Scene_Switcher/level/level_A1.gd" id="1_hi5wk"]
[ext_resource type="PackedScene" uid="uid://dg5dmtikklnwn" path="res://Scene_Switcher/enemy/assault_tank.tscn" id="2_nhig4"]
[ext_resource type="PackedScene" uid="uid://bbtkbj3sj8rn1" path="res://Scene_Switcher/enemy/helicopter.tscn" id="3_lt88u"]
[ext_resource type="PackedScene" uid="uid://pu6gx570i247" path="res://Scene_Switcher/enemy/jeep.tscn" id="4_hxx77"]
[ext_resource type="PackedScene" uid="uid://mp15xma1rlvc" path="res://Scene_Switcher/enemy/artillery.tscn" id="5_b022m"]
[ext_resource type="PackedScene" uid="uid://dgg148mcr147s" path="res://Scene_Switcher/enemy/Kamikaze.tscn" id="6_fhdso"]
[ext_resource type="PackedScene" uid="uid://bgntfh7ttfv45" path="res://Scene_Switcher/enemy/Drop/item_drop.tscn" id="7_vf64j"]
[ext_resource type="Texture2D" uid="uid://chpvv3tu85en8" path="res://Scene_Switcher/level/asset/normal_city/city_2_left.png" id="8_fbg04"]
[ext_resource type="Texture2D" uid="uid://c8qa45bgvehb1" path="res://Scene_Switcher/enemy/asset/vortex.png" id="9_q5ek2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uelrl"]
size = Vector2(416, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdlmk"]
size = Vector2(384, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxqmo"]
size = Vector2(80, 63.5294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b6yq"]
size = Vector2(332.8, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6md14"]
size = Vector2(307.2, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygj74"]
size = Vector2(82, 64.9412)

[sub_resource type="Curve" id="Curve_dfv1f"]
min_value = 0.5
max_value = 1.5
_data = [Vector2(0, 1.48901), 0.0, 0.0, 0, 0, Vector2(0.55618, 1.23626), -1.00957, -1.00957, 0, 0, Vector2(0.988764, 0.494505), -2.59388, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_vr7j4"]
offsets = PackedFloat32Array(0, 0.335878, 0.705521, 0.778626, 0.977099, 1)
colors = PackedColorArray(0.834999, 0.891277, 0, 1, 0.67451, 0.321569, 0, 1, 0.658911, 1.22733e-06, 9.62615e-08, 1, 0, 0, 0, 1, 0, 0, 0, 0.103448, 1, 1, 1, 0)

[node name="level_a3_2" type="Node2D"]
z_index = -1
script = ExtResource("1_hi5wk")
assault_tank_scene = ExtResource("2_nhig4")
helicopter_scene = ExtResource("3_lt88u")
jeep_scene = ExtResource("4_hxx77")
artillery_scene = ExtResource("5_b022m")
kamikaze_scene = ExtResource("6_fhdso")
item_drop_scene = ExtResource("7_vf64j")

[node name="Sprites" type="Node2D" parent="."]

[node name="sprite" type="Sprite2D" parent="Sprites"]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("8_fbg04")

[node name="left_border" type="Node2D" parent="."]
position = Vector2(128, 544)
scale = Vector2(4, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D"]
position = Vector2(208, 540)
shape = SubResource("RectangleShape2D_uelrl")

[node name="StaticBody2D_Other" type="Area2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D_Other"]
position = Vector2(192, 540)
shape = SubResource("RectangleShape2D_jdlmk")

[node name="limit" type="StaticBody2D" parent="left_border"]
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/limit"]
position = Vector2(8, -0.235302)
shape = SubResource("RectangleShape2D_xxqmo")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="right_border" type="Node2D" parent="."]
position = Vector2(1760, 544)
scale = Vector2(5, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D"]
position = Vector2(89.6, 552)
shape = SubResource("RectangleShape2D_8b6yq")

[node name="StaticBody2D_Other" type="Area2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D_Other"]
position = Vector2(102.4, 552)
shape = SubResource("RectangleShape2D_6md14")

[node name="limit" type="StaticBody2D" parent="right_border"]
position = Vector2(-326.4, 0)
scale = Vector2(0.8, 1)
collision_layer = 16
collision_mask = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/limit"]
position = Vector2(406, 0.470589)
shape = SubResource("RectangleShape2D_ygj74")
debug_color = Color(0.768046, 0.445917, 0.0402837, 0.42)

[node name="spawn_point" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="spawn_point"]
position = Vector2(524, 336)

[node name="Marker2D3" type="Marker2D" parent="spawn_point"]
position = Vector2(610, 670)

[node name="Marker2D2" type="Marker2D" parent="spawn_point"]
position = Vector2(1400, 743)

[node name="Marker2D4" type="Marker2D" parent="spawn_point"]
position = Vector2(983, 628)

[node name="Marker2D7" type="Marker2D" parent="spawn_point"]
position = Vector2(1248, 393)

[node name="Marker2D5" type="Marker2D" parent="spawn_point"]
position = Vector2(816, 961)

[node name="Marker2D6" type="Marker2D" parent="spawn_point"]
position = Vector2(1176, 919)

[node name="Left_Smokes" type="Node2D" parent="."]
position = Vector2(164, 461)

[node name="Smoke_Vehicle" type="CPUParticles2D" parent="Left_Smokes"]
position = Vector2(245, -82)
amount = 300
lifetime = 5.0
texture = ExtResource("9_q5ek2")
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_curve = SubResource("Curve_dfv1f")
color_ramp = SubResource("Gradient_vr7j4")

[node name="Smoke_Vehicle2" type="CPUParticles2D" parent="Left_Smokes"]
position = Vector2(108, -95)
amount = 300
lifetime = 5.0
texture = ExtResource("9_q5ek2")
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_curve = SubResource("Curve_dfv1f")
color_ramp = SubResource("Gradient_vr7j4")

[node name="Smoke_Vehicle3" type="CPUParticles2D" parent="Left_Smokes"]
position = Vector2(168, 24)
amount = 300
lifetime = 5.0
texture = ExtResource("9_q5ek2")
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_curve = SubResource("Curve_dfv1f")
color_ramp = SubResource("Gradient_vr7j4")

[node name="Smoke_Vehicle4" type="CPUParticles2D" parent="Left_Smokes"]
position = Vector2(126, 141)
amount = 300
lifetime = 5.0
texture = ExtResource("9_q5ek2")
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_curve = SubResource("Curve_dfv1f")
color_ramp = SubResource("Gradient_vr7j4")

[node name="Smoke_Vehicle5" type="CPUParticles2D" parent="Left_Smokes"]
position = Vector2(236, 164)
amount = 300
lifetime = 5.0
texture = ExtResource("9_q5ek2")
emission_shape = 1
emission_sphere_radius = 30.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_curve = SubResource("Curve_dfv1f")
color_ramp = SubResource("Gradient_vr7j4")

[connection signal="body_entered" from="right_border/StaticBody2D_Other" to="." method="_on_static_body_2d_other_body_entered"]
